pull new translation strings and update underscores to dashes

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -74,14 +74,24 @@ ar:
   meta:
     kids_app:
       title: "تطبيق الكتاب المقدس للأطفال"
+      description: "تطبيق الكتاب المقدس للاطفال هو طريقة رائعة لاطفالك ليتعلموا قصص كتابية عن يسوع، هبة الحياة الابدية، و الدروس الكثيرة التي يعلمها الله لنا. في هذه الخبرة التفاعلية، يتواصل الاطفال بصورة مباشرة مع كلمة الله، كما يشاهدون امور ممتعة ويحصدون النقاط للقراءة و يجمعون الكنوز."
     100million:
       title: " تبدأ مع 100 مليون"
       description: "تم تثبيت تطبيق الكتاب المقدس ما يقرب من 100 مليون مرة - هذا انجاز لا يصدق! لكننا بدأنا للتو. نزل تطبيق  الكتاب المقدس مجانا اليوم - ومن ثم شارك التطبيق مع أصدقائك. دعونا نصنع التاريخ معا."
     mobile:
       title: "تطبيق الكتاب المقدس"
+      description: "اقرأ كلمة الله في اي وقت و اي مكان باستخدام تطبيق الكتاب المقدس Youversion. شارك النصوص الكتابية مع اصدقائك، اضف تمييز للنص او اشارات مرجعية لبعض النصوص، و كون عادة يومية بقراءة الكتاب المقدس من خلال اتباع خطط القراءة.\nالتطبيق متاح للاندرويد، الويندوز فون، الاي او اس، البلاك بيري و اكثر من هذا."
+    site:
+      title: "Bible.com"
+      description: "اجلب جمال و حق الكتاب المقدس لحياتك اليومية. مع تطبيق الكتاب المقدس Youversion، يمكنك القراءة، المشاهدة، الاستماع، و المشاركة من خلال هواتفك الذكية او التابلت، او من خلال الاتصال بالانترنت على Bible.com"
     connections:
       index:
         title: "الحسابات المتصلة"
+  kids:
+    bible app: "تطبيق الكتاب المقدس"
+    share:
+      facebook name: "تطبيق الكتاب المقدس للأطفال"
+      email: "بريد إلكتروني "
   now: "الأن"
   celebrating 50MM: "نحتفل بـ 50 مليون تحميل للتطبيق!"
   link: "رابط"
