--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -74,19 +74,57 @@ cs:
   meta:
     kids_app:
       title: "Aplikace Bible pro děti"
-      description: "Aplikace Bible pro děti je báječný způsob jak naučit děti příběhy o Ježíši, daru věčného život  a spoustu lekcí, které nás Bůh učí.  Děti se mohou prostřednictvím zkušeností s interakcí přímo zapojit do Božího slova, zatímco díky nádherná grafice sbírají poklady a body za čtení."
+      description: "Aplikace Bible for Kids představuje skvělý způsob jak učit děti příběhům o Ježíši, daru věčného života  a spoustě dalších lekcí, které nás Bůh učí.  Děti se mohou bezprostředně zapojit do Božího slova díky krásné grafice a během hry získávají body za čtení a sbírají poklady."
     100million:
       title: "Začíná to se 100 milióny"
       description: "Aplikace Bible byla již nainstalována skoro 100 milionkrát -  je to neuvěřitelný historický milník. A to jsme ještě ani pořádně nezačali. Již dnes si stáhněte aplikaci Bible, která je zdarma - a pak sdílejte aplikaci se svými přáteli. Začněme společné tvořit dějiny. "
     mobile:
       title: "Aplikace Bible"
-      description: "Čtěte Boží slovo kdykoliv a kdekoliv prostřednictvím YouVersion aplikace Bible. Sdílejte texty s přáteli, zvýrazňujte a založte si odstavce. Vytvořte si každodenní návyk díky plánům čtení. Dostupné pro iOS, Android, Blackberry, Windows Phone a další."
+      description: "Čtěte Boží slovo kdykoliv a kdekoliv prostřednictvím YouVersion aplikace Bible. Sdílejte texty s přáteli, zvýrazňujte a ukládejte si záložky. Vytvořte si každodenní návyk díky plánům čtení. Dostupné pro iOS, Android, Blackberry, Windows Phone a další."
     site:
       title: "Bible.com"
-      description: "Vneste si krásu a biblické pravdy do vašeho každodenního života.  S aplikací YouVersion Bible můžete číst, sledovat, poslouchat a sdílet se na chytrých telefonech nebo tabletech a také online na Bible.com"
+      description: "Vneste krásu a biblické pravdy do vašeho každodenního života.  S aplikací YouVersion Bible můžete písmo číst, sledovat, poslouchat a sdílet na svém chytrém telefonu nebo tabletu a také online na Bible.com"
     connections:
       index:
         title: "Připojené účty"
+  kids:
+    bible app: "Aplikace Bible"
+    for: "pro"
+    kids: "děti"
+    by youversion: "díky YouVersion"
+    help your kids: "Pomozte vašim dětem zamilovat si Boží slovo."
+    free download: "Stáhnout zdarma!"
+    app store: "Dostupné na App store"
+    google play: "Získat na Google Play"
+    amazon: "K dispozici na Amazon Appstore pro Android"
+    app icon: "Ikona aplikace Bible pro děti"
+    jesus and friends: "Ježíš a přátelé"
+    interact text: "Věnujte se Bibli a uvidíte jak přichází k životu."
+    story text 1: "Zahrada Eden"
+    story text 2: "První vánoce"
+    story text 3: "Josef, Marie a Ježíš v jesličkách"
+    story text 4: "Andělé se zjevili pastýřům a oznámili jim narození Krista"
+    story text 5: "Ježíš uzdravuje chromého"
+    feature 1: "Bezpletné zkušenosti s Biblí pro vaše děti"
+    feature 2: "Animovaná aplikace příběhů pro chytré telefony a tablety"
+    feature 3: "Barevné ilustrace s animací na dotek"
+    feature 4: "Hry a zábava napomáhá dětem zapamatova si co se učili"
+    feature 5: "Snadné ovládání"
+    share:
+      tell friends: "Řekněte přátelům o aplikaci Bible pro děti."
+      facebook name: "Aplikace Bible pro děti"
+      facebook description: "Aplikace Bible pro děti je zde! Stáhněte si zdarma aplikaci pro iOS a Android dnes: interaktivní příběhy Bible pomohou vašim dětem se učit, hrát a růst v Božím slově. www.bible.com/kids"
+      facebook link: "http://www.bible.com/kids"
+      facebook redirect: "http://www.bible.com/kids"
+      twitter description: "Aplikace Bible pro děti od @YouVersion je zde! Je zábavná a zcela zdarma. Stažení\n: bible.com/kids"
+      twitter hashtags: "Biblička"
+      email: "E-mail"
+      email subject: "Aplikace Bible pro děti je zde!"
+      email body: "Skvělá zpráva - aplikace Bible pro děti je zde! Je zcela zdarma a je k dispozici pro iPhony, iPad, iPod touch a zařízení s androidem. Aplikace je rostoucí sbírka Biblických příběhů s animacemi na dotyk. Obsahuje vzdělávací aktivity a je dokonalá pro znalost klíčových příběhů Bible. Podívejte se na bible.com/kids na vašem zažízení a stáhněte si ji ještě dnes."
+    partner:
+      youversion: "YouVersion: Světová nepopulárnější aplikace Bible"
+      in partnership: "ve spolupráci s"
+      one hope: "One Hope: Mimořádný biblický obsah pro děti"
   now: "Aktuálně"
   celebrating 50MM: "Oslavujeme 50 milionů instalací aplikace!"
   link: "Odkaz"
@@ -701,8 +739,8 @@ cs:
     restart description: "Můžete restartovat váš plán. Celá historie čtení a postupu bude vymazána a začnete od začátku."
     restart: "Restartovat plán"
     privacy description:
-      private: "Váš plán čtení je soukromý. Přepněte nastavení na Pouze přátelé a sdílejte váš plán a aktivity s přáteli."
-      public: "Váš plán čtení je veřejný. Přepněte nastavení na Soukromý plán a váš plán a aktivity budete vidět pouze vy."
+      private: "Váš plán čtení je soukromý. Změňte nastavení na Pouze přátelé a sdílejte tak váš plán s přáteli."
+      public: "Váš plán čtení je veřejný. Přepněte nastavení na Soukromý plán a váš plán budete vidět pouze vy."
     make private: "Nastavit jako soukromý"
     make public: "Sdílet s přáteli"
     privacy title: "Soukromí"
