--- a/config/locales/es-ES.yml
+++ b/config/locales/es-ES.yml
@@ -87,6 +87,44 @@ es-ES:
     connections:
       index:
         title: "Cuentas conectadas"
+  kids:
+    bible app: "La Biblia App"
+    for: "para"
+    kids: "niños"
+    by youversion: "de YouVersion"
+    help your kids: "Ayuda a tus niños a enamorarse de la Palabra de Dios"
+    free download: "¡Descárgatela gratis!"
+    app store: "Disponible en la App Store"
+    google play: "Cógela de Google Play"
+    amazon: "Disponible en la Appstore Amazon para Android"
+    app icon: "icono App para la Biblia App para niños"
+    jesus and friends: "Jesús y amigos"
+    interact text: "Interactúa con la Biblia y observa cómo se hace viva."
+    story text 1: "El huerto del Edén"
+    story text 2: "La primera Navidad"
+    story text 3: "José, María y el niño Jesús en el pesebre"
+    story text 4: "Los ángeles se aparecen a los pastores para anunciarles el nacimiento de Cristo"
+    story text 5: "Jesús sana al paralítico"
+    feature 1: "Una experiencia con la Biblia gratuita para tus niños"
+    feature 2: "Un libro animado en una app para smartphones y tabletas"
+    feature 3: "Ilustraciones llenas de color con animaciones activadas por tacto"
+    feature 4: "Juegos y actividades que ayudan a los niños a recordar lo que han aprendido"
+    feature 5: "Navegación adaptada para niños"
+    share:
+      tell friends: "Cuéntale a tus amigos sobre la Biblia App para Niños"
+      facebook name: "La App de la Biblia para Niños"
+      facebook description: "¡La Biblia App para niños está aquí! Descárgala gratis para iOS y Android: historias de la Biblia interactivas que ayudar a tus niños a aprender, jugar y crecer en la Palabra de Dios. www.bible.com/kids"
+      facebook link: "http://www.bible.com/kids"
+      facebook redirect: "http://www.bible.com/kids"
+      twitter description: "¡La Biblia App para Niños de @YouVersion está aquí! ¡Es divertida y completamente gratis. Descárgala de: bible.com/kids"
+      twitter hashtags: "kidsbible"
+      email: "Correo electrónico"
+      email subject: "¡La Biblia App para Niños está aquí!"
+      email body: "Buenas noticias - ¡La Biblia App para Niños está aquí! Es completamente gratuita y está disponible ahora para iPhone, iPad, iPod touch y dispositivos Android. La aplicación tiene una colección creciente de historias bíblicas con animaciones activadas por tacto y actividades de aprendizaje, perfectas para ayudar a los niños a aprender las grandes historias de la Biblia. Ve a bible.com/kids en tu dispositivo móvil y bájatela ya."
+    partner:
+      youversion: "YouVersion: la Bible App más popular en todo el mundo"
+      in partnership: "en colaboración con"
+      one hope: "Una esperanza: Extraordinario contenido bíblico para niños"
   now: "Ahora"
   celebrating 50MM: "¡Celebrando 50 millones de instalaciones!"
   link: "Enlace"
