--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -87,6 +87,40 @@ fr:
     connections:
       index:
         title: "Comptes liés"
+  kids:
+    bible app: "La Bible App"
+    for: "pour"
+    kids: "enfants"
+    by youversion: "par YouVersion"
+    help your kids: "Aidez vos enfants à aimer la Parole de Dieu."
+    free download: "À télécharger gratuitement."
+    app store: "Disponible sur l'App Store"
+    google play: "À trouver sur Google Play"
+    amazon: "Disponible sur l'Amazon Appstore pour Android"
+    app icon: "Icône de la Bible App pour Enfants "
+    jesus and friends: "Jésus et ses amis"
+    interact text: "Interagissez avec la Bible et voyez comme elle prend vie. "
+    story text 1: "Le jardin d’Éden"
+    story text 2: "Le premier Noël"
+    story text 3: "Joseph, Marie et l'enfant Jésus dans la mangeoire. "
+    story text 4: "Des anges apparaissent aux bergers pour leur parler de la naissance de Christ"
+    story text 5: "Jésus guéri le paralysé"
+    feature 1: "Une expérience de la Bible gratuite pour vos enfants"
+    feature 2: "Une app de livre animé pour les smartphones et tablettes"
+    feature 3: "Des illustrations hautes en couleurs avec des animations tactiles "
+    feature 4: "Des jeux et activités pour aider les enfants à retenir ce qu'ils apprennent "
+    feature 5: "Une navigation adaptée aux enfants "
+    share:
+      tell friends: "Parler de la Bible App pour Enfants avec vos amis. "
+      facebook name: "La Bible App pour les Enfants"
+      facebook description: "La Bible App pour Enfants est ici ! Téléchargez-la gratuitement pour iOS et Android aujourd'hui: Des histoires de la Bible pour aider vos enfants à apprendre, jouer et grandir dans la Parole de Dieu. www.bible.com/kids"
+      facebook link: "http://www.bible.com/kids"
+      facebook redirect: "http://www.bible.com/kids"
+      twitter description: "La Bible App pour Enfantss de @YouVersion est ici ! C'est amusant et totalement gratuit. Télégarger: bible.com/kids"
+      twitter hashtags: "biblepourenfants"
+      email: "Email"
+      email subject: "La Bible App pour Enfants est ici !"
+      email body: "Grande nouvelle - la Bible App pour Enfants est ici ! Elle est totalement gratuite et disponible dès maintenant pour iPhone, iPad, iPod touch, et Android. Cette app est une collection d'histoires de la Bible avec des animations tactiles et des activités d'apprentissage, parfait pour aider les enfants à apprendre les grandes histoires de la Bible. Allez sur bible.com/kids sur votre appareil mobile pour la télécharger aujourd'hui."
   now: "Maintenant"
   celebrating 50MM: "Célébration des 50 millions d'installations de cette app!"
   link: "Lien"
