--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -74,17 +74,24 @@ hi:
   meta:
     kids_app:
       title: "नन्हे-मुन्ने बच्चों के लिए बाइबिल App "
+      description: "बच्चों के लिए बाइबिल App अपने बच्चों को यीशु, अनन्त जीवन का उपहार, और भगवान ने हमें सिखाता कई सबक के बारे में बाइबिल कहानियों को जानने के लिए एक शानदार तरीका है. खजाने पढ़ने और इकट्ठा करने के लिए अंक अर्जित करते हुए इस इंटरैक्टिव अनुभव में, बच्चों को सीधे मनोहर दृश्यों के साथ भगवान के शब्द के साथ व्यस्त हैं। "
     100million:
       title: "100 मिलियन से शुभारंभ हुआ। "
       description: "100 मिलियन से अधिक इन्स्टाल के साथ एक नया कीर्तिमान रचित हुआ। यह मात्र शुरुआत हैं। निशुल्क बाइबिल App आज ही डाउनलोड कर अपने  मित्रों के  साथ शेयर करे। आओ हम साथ मिलकर इतिहास की रचना करे। "
     mobile:
       title: "बाइबिल App"
+      description: "लाखों,करोड़ों लोगों द्वारा उपयुक्त इस बाइबिल App को अपने नित्य जीवन का अंग बनाये और प्रभु के वचन का अध्ययन करे।निशुल्क बाइबिल App डाउनलोड करें, और बुकमार्क्स, टिप्पणी, पाठक योजना दुनिया भर में कहीं से भी ऐक्सेस करे। IOS,Android,Blackberry और Window Phone के लिए उपलब्ध ।"
     site:
       title: "Bible.com"
       description: "बाइबिल की सुंदरता और सच्चाई को अपने नित्य जीवन का हिस्सा बनाए। YouVersion बाइबिल App के साथ पढ़े,देखे,सुने और शेयर करे अपने स्मार्टफोन या टेबलेट पर, यह Bible.com पर ऑनलाइन उपलब्ध हैं। "
     connections:
       index:
         title: "कनेक्टेड अकाउंट"
+  kids:
+    bible app: "बाइबिल App"
+    share:
+      facebook name: "नन्हे-मुन्ने बच्चों के लिए बाइबिल App "
+      email: "इमेल"
   now: "अभी "
   celebrating 50MM: "50 मिलियन app स्थापना उत्सव!"
   link: "लिंक"
