--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -87,6 +87,44 @@ id:
     connections:
       index:
         title: "Akun terkait"
+  kids:
+    bible app: "Aplikasi Alkitab"
+    for: "untuk"
+    kids: "anak-anak"
+    by youversion: "oleh YouVersion"
+    help your kids: "Bantu anak-anak Anda jatuh cinta dengan Firman Tuhan."
+    free download: "Unduh gratis!"
+    app store: "Tersedia di App store"
+    google play: "Dapatkan di Google Play"
+    amazon: "Tersedia di Amazon Appstore untuk Android"
+    app icon: "Icon Ap untuk Ap Alkitab untuk Anak"
+    jesus and friends: "Yesus dan sahabat"
+    interact text: "Berinteraksi dengan Alkitab dan saksikan itu menjadi nyata."
+    story text 1: "Taman Eden"
+    story text 2: "Natal Pertama"
+    story text 3: "Yusuf, Maria, dan bayi Yesus di palungan"
+    story text 4: "Malaikat muncul di hadapan para gembala untuk memberitakan kelahiran Kristus"
+    story text 5: "Yesus menyembuhkan orang lumpuh"
+    feature 1: "Pengalaman Alkitab gratis untuk anak Anda"
+    feature 2: "Ap buku cerita animasi untuk smartphone dan tablet"
+    feature 3: "Ilustrasi berwarna dengan animasi sentuh-aktivasi"
+    feature 4: "Permainan dan aktifitas membantu anak-anak ingat apa yang mereka pelajari"
+    feature 5: "Navigasi akrab-anak"
+    share:
+      tell friends: "Beritahu teman Anda tentang Ap Alkitab untuk Anak."
+      facebook name: "Aplikasi Alkitab untuk anak-anak."
+      facebook description: "Ap Alkitab untuk Anak di sini! Unduh ap gratis untuk iOS dan Android hari ini: cerita Alkitab interaktif untuk membantu anak Anda belajar, bermain, dan bertumbuh dalam Firman Tuhan. www.bible.com/kids "
+      facebook link: "http://www.bible.com/anak"
+      facebook redirect: "http://www.bible.com/anak"
+      twitter description: "Ap Alkitab untuk Anak dari @YouVersion telah hadir! Menyenangkan dan gratis total. Unduh: bible.com/anak"
+      twitter hashtags: "alkitabanak"
+      email: "Email"
+      email subject: "Ap Alkitab untuk Anda telah hadir!"
+      email body: "Kabar baik - Ap Alkitab untuk Anak telah hadir! Gratis total dan tersedia sekarang untuk piranti iPhone, iPad, iPod touch, dan Android. Ap ini adalah cerita Alkitab yang terus bertambah dengan animasi sentuh-aktivasi dan aktifitas belajar, cocok untuk membantu anak-anak belajar kisah-kisah Alkitab. Pergi ke bible.com/anak di piranti bergerak Anda untuk mengunduhnya hari ini."
+    partner:
+      youversion: "YouVersion: Ap Alkitab paling populer di dunia"
+      in partnership: "rekan dengan"
+      one hope: "Satu Harapan: Isi Alkitab luar biasa untuk Anak"
   now: "Sekarang"
   celebrating 50MM: "Merayakan 50 Juta Instalasi Aplikasi"
   link: "Tautan"
