--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -46,6 +46,11 @@ km:
     connections:
       index:
         title: "បាន​ភ្ជាប់​ទៅ​គណនី"
+  kids:
+    bible app: "កម្មវិធីព្រះគម្ពីរ"
+    share:
+      facebook name: "កម្ម​វិធី​ព្រះ​គម្ពីរ​សម្រាប់​កុមារ"
+      email: "អ៊ីម៉ែល"
   now: "ឥឡូវ"
   celebrating 50MM: "អប​អរសាទការ​តម្លើងកម្មវិធី 50លាន​ដង!"
   link: "តំណ​ភ្ជាប់"
