--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -74,14 +74,24 @@ mk:
   meta:
     kids_app:
       title: "Апликација \"Библија\" за деца"
+      description: "Апликацијата „Библија за деца“ е одличен начин за твоите деца да ги научат Библиските приказни за Исус, нашиот подарок — вечен живот, и за многуте лекции кои што Господ нѐ учи. Преку ова интерактивно искуство, децата директно ќе се впуштат во Божјиот Збор со неверојатни визуелни ефекти додека ги заработуваат поените за читање и ги собираат богатствата."
     100million:
       title: "Започнува со 100 милиони"
       description: "Апликацијата „Библија“ е преземена речиси 100 милиони пати - неверојатен успех! Но, ние со ова само се загреваме. Преземете ја бесплатната апликација „Библија“ денеска и потоа споделете ја со вашите пријатели. Ајде да ја создаваме историјата заедно."
     mobile:
       title: "Апликација „Библија“"
+      description: "Читајте го Божјиот Збор во секое време и насекаде користејќи ја апликацијата „Библија“. Сподели стихови со пријателите, нагласи и обележи стихови и создади си дневни навики со апликацијата „Библија“ од YouVersion. Достапен за iOS, Android, Blackberry, Windows Phone и за други."
+    site:
+      title: "Bible.com"
+      description: "Донеси ја убавината и вистината на Библијата во секојдневниот живот. Со апликацијата „Библија“ од YouVersion можеш да читаш, слушаш и споделуваш на твојот паметен телефон или таблет и на Bible.com."
     connections:
       index:
         title: "Поврзани профили"
+  kids:
+    bible app: "Апликација „Библија“"
+    share:
+      facebook name: "Апликација \"Библија\" за деца"
+      email: "Е-пошта"
   now: "Сега"
   celebrating 50MM: "Славиме 50 Милиони инсталирани апликации!"
   link: "Врска"
