--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -74,6 +74,7 @@ ru:
   meta:
     kids_app:
       title: "Приложение Библия для детей"
+      description: "Приложение Библия для детей это отличный способ для ваших детей узнать библейские истории об Иисусе, о нашем даре вечной жизни и многие уроки, которые Бог нас учит. В этом интерактивном опыте дети непосредственно взаимодействуют с Божьем Словом, в то время как зарабатывают очки для чтения и собирают сокровища."
     100million:
       title: "Всё начинается со 100 млн"
       description: "Приложение Библия было установлено почти 100 млн раз — это просто невообразимо! И мы только начинаем! Установите бесплатное приложение сегодня и поделитесь ссылкой на приложение с друзьями. Давайте вместе творить историю!"
@@ -82,9 +83,15 @@ ru:
       description: "Читайте Слово Божье в любое время и в любом месте с помощью приложения Библия от YouVersion. Делитесь Писанием с друзьями, выделяйте цветом стихи, ставьте закладки, а также погрузитесь в ежедневное чтение плана Библии. Доступно для iOS, Android, Blackberry, телефонов с Windows и др."
     site:
       title: "Bible.com"
+      description: "Внесите красоту и правду Библии в свою ежедневную жизнь. Используя приложение Библия, вы можете читать, смотреть, слушать и делиться стихами на своем смартфоне, планшете или онлайн в Bible.com"
     connections:
       index:
         title: "Подключенные аккаунты"
+  kids:
+    bible app: "Приложение Библия"
+    share:
+      facebook name: "Приложение Библия для детей"
+      email: "Email"
   now: "Сейчас"
   celebrating 50MM: "Отмечаем 50 миллионов установок!"
   link: "Ссылка"
