--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -87,6 +87,44 @@ sv:
     connections:
       index:
         title: "Anslutna konton"
+  kids:
+    bible app: "Bibelappen"
+    for: "för"
+    kids: "barn"
+    by youversion: "av YouVersion"
+    help your kids: "Hjälp dina barn att förälska sig i Guds Ord."
+    free download: "Ladda ner gratis!"
+    app store: "Tillgängligt på App store"
+    google play: "Hämta det på Google Play"
+    amazon: "Tillgängligt på Amazon Appstore för Android"
+    app icon: "App-ikon för Bibelappen för barn"
+    jesus and friends: "Jesus och vänner"
+    interact text: "Interagera med Bibeln och se det komma till liv."
+    story text 1: "Edens lustgård"
+    story text 2: "Första julen"
+    story text 3: "Josef, Maria och Jesusbarnet i krubban"
+    story text 4: "Änglar visade sig för hedarna för att berätta att Kristus var född"
+    story text 5: "Jesus helar den lame"
+    feature 1: "Den fria bibelupplevelsen för dina barn"
+    feature 2: "Animerad sagoboksapp för smartphones och surfplattor"
+    feature 3: "Färgglada illustrationer med beröringsaktiverade animationer"
+    feature 4: "Spel och pyssel hjälper barn att komma ihåg vad de har lärt sig"
+    feature 5: "Barnvänlig navigering"
+    share:
+      tell friends: "Berätta för dina vänner om Bibelappen för barn"
+      facebook name: "Bibelappen för barn"
+      facebook description: "Bibelappen för barn är här! Ladda ner den fria appen för iOS och Android idag: Interaktiva bibelhistorier för att hjälpa dina barn att lära sig, spela och växa i Guds Ord.\nhttps://www.bible.com/sv/kids"
+      facebook link: "https://www.bible.com/sv/kids"
+      facebook redirect: "https://www.bible.com/sv/kids"
+      twitter description: "Bibelappen för barn från @YouVersion är här! Den är rolig och gratis. Ladda ner: bible.com/sv/kids"
+      twitter hashtags: "kidsbible"
+      email: "E-post"
+      email subject: "Bibelappen för barn är här!"
+      email body: "Goda nyheter - Bibelappen för barn är här! Det är helt gratis och den är tillgänglig nu för iPhone, iPad, iPod touch och Android-enheter. Appen är en växande samling av Bibelns berättelser med beröringsaktiverade animationer och lärande, perfekt för att hjälpa barnen lära sig de stora berättelserna i Bibeln. Gå till bible.com/sv/kids på den mobila enheten för att ladda ner den i dag."
+    partner:
+      youversion: "YouVersion: Världens populäraste Bibelapp"
+      in partnership: "i samarbete med"
+      one hope: "One Hope: Extraordinärt bibelmaterial för barn"
   now: "Nu"
   celebrating 50MM: "Firar 50 miljoner installationer!"
   link: "Länk"
