--- a/config/locales/ta.yml
+++ b/config/locales/ta.yml
@@ -74,14 +74,24 @@ ta:
   meta:
     kids_app:
       title: "சிறுவர்களுக்கானா வேதாகம ஆப்ப "
+      description: "உங்கள் குழந்தைகள் இயேசுவை பற்றிய வேதாகம கதைகள், நித்திய வாழ்க்கையான நமது பரிசு மற்றும் தேவன் நமக்கு போதிக்கும் பல படிப்பினைகளை அறிய, மழலைகளுக்கான வேதாகம பயன்பாடு ஒரு சிறந்த வழியாக உள்ளது. இந்த ஊடாடும் அனுபவமானது, குழந்தைகள் பொக்கிஷங்கள் மற்றும் படித்து சேகரிக்கும் புள்ளிகளை சம்பாதிப்பதோடு, நேரடியாக மகிழ்ச்சிகரமானதான காட்சியமைப்புகளோடு தேவ வார்த்தையில் ஈடுபடுத்துகிறது."
     100million:
       title: "இது தொடங்குவது 100 மில்லியனில் "
       description: "ஏறக்குறைய 10 கோடி முறை பைபிள் App நிறுவப்பட்டுள்ளது - இது ஒரு வியத்தகு மைல்கல்! ஆனால் நாம் இப்பொழுதே ஆரம்பித்துள்ளோம். இன்றே இலவச பைபிள் App ஐ பதிவிறக்கம் செய்யுங்கள் - அதன்பின் அதை உங்கள் நண்பர்களுடன் பகிர்ந்து கொள்ளுங்கள். நாம் இணைந்து வரலாறு படைப்போம்."
     mobile:
       title: "வேதாகம பயன்பாடு"
+      description: "எந்நேரத்திலும் எவ்விடத்திலும் YouVersion வேதாகம பயன்பாடு மூலம் தேவ வசனத்தை படியுங்கள். தேவ வசனத்தை நண்பர்களோடு பகிருங்கள், பத்திகளை சிறப்புக்கூறு மற்றும் புத்தகக்குறி இடுங்கள், வேதாகம திட்டங்களை தினசரி பழக்கமாக்குங்கள். iOS, ஆன்றாய்ட் , ப்ளாக்பெர்ரி, விண்டோஸ் தொலைபேசி மற்ற பலவற்றில் இது உள்ளது"
+    site:
+      title: "Bible.com"
+      description: "அன்றாட வாழ்க்கையில் வேதத்தின் சத்தியம் மற்றும் அழகை கொண்டு வாருங்கள். YouVersion வேதாகம பயன்பாடு மூலம் நீங்கள் படிக்கலாம், காணலாம், கேட்கலாம் மற்றும் நுண்ணறிபேசி அல்லது சுருள்பாசி மற்றும் நிகழ் நிலையில் bible.com-ல் பகிரலாம்."
     connections:
       index:
         title: "இணைக்கப்பட்டுள்ள கணக்குகள்"
+  kids:
+    bible app: "வேதாகம பயன்பாடு"
+    share:
+      facebook name: "சிறுவர்களுக்கானா வேதாகம ஆப்ப "
+      email: "மின்னஞ்சல்"
   now: "இப்பொழுது"
   celebrating 50MM: "50 மில்லியன் பயன்பாடு நிறுவல்களை கொண்டாடுகிறது!"
   link: "தொடர்பு "
