--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -87,6 +87,44 @@ es:
     connections:
       index:
         title: "Cuentas Conectadas"
+  kids:
+    bible app: "La Biblia App"
+    for: "para"
+    kids: "niños"
+    by youversion: "por YouVersion"
+    help your kids: "Ayuda a los niños a enamorarse de la Palabra de Dios."
+    free download: "¡Descárgala Gratis!"
+    app store: "Disponible en la tienda App"
+    google play: "Obténgala en Google Play"
+    amazon: "Disponible en la Tienda App de Amazon para Android"
+    app icon: "Icono app para La Bíblia App para Niños"
+    jesus and friends: "Jesús y amigos"
+    interact text: "Interactúa con la Biblia y Aprende a Vivirla."
+    story text 1: "El jardín de Edén"
+    story text 2: "La primera Navidad"
+    story text 3: "José y María con el bebé Jesús en el pesebre"
+    story text 4: "Unos ángeles se aparecen a los pastores para decirles acerca del nacimiento de Cristo"
+    story text 5: "Jesús sana al paralítico"
+    feature 1: "Una experiencia única para los niños con la Biblia"
+    feature 2: "Un App de historias animadas para tablets y teléfonos inteligentes"
+    feature 3: "Ilustraciones llenas de colores que se activan-al-tacto"
+    feature 4: "Los juegos y actividades ayudan a los niños a recordar lo que han aprendido."
+    feature 5: "Con navegación amigable para los niños"
+    share:
+      tell friends: "Comparte con tus amigos La Biblia App para Niños."
+      facebook name: "La Biblia App para Niños"
+      facebook description: "¡La Bíblia App para Niños está disponible ya! Descargue la app gratis para iOS y Android hoy: historias bíblicas interactivas para ayudar que sus niños aprendan, jueguen, y crezcan en la Palabra de Dios.  www.bible.com/es/ninos"
+      facebook link: "http://www.bible.com/ninos"
+      facebook redirect: "http://www.bible.com/ninos"
+      twitter description: "¡La Bíblia App para Niños de @YouVersion es disponible ya! Es divertida y completamente gratis. Descarga: bible.com/es/ninos"
+      twitter hashtags: "la Bíblia para niños"
+      email: "Correo electrónico"
+      email subject: "¡La Bíblia App para Niños es disponible!"
+      email body: "¡Gran noticia - la Bíblia App para Niños es disponible! Es completamente gratis y es disponible ahora para los dispositivos iPhone, iPad, iPod touch, y Android. La app es una colección creciente de cuentos bíblicos, con animaciones activadas por tocar y actividades del aprendizaje, perfectos para ayudar que los niños aprendan las grandes historias de la Bíblia. Vaya a bible.com/ninos en su dispositivo móvil para descargarla hoy."
+    partner:
+      youversion: "YouVersion: La Bíblia App más popular del mundo"
+      in partnership: "en alianza con"
+      one hope: "One Hope: Extraordinario contenido bíblico para niños"
   now: "Ahora"
   celebrating 50MM: "¡Celebrando 50 millones de instalaciones!"
   link: "Enlace"
