--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -87,6 +87,44 @@ it:
     connections:
       index:
         title: "Account Collegati"
+  kids:
+    bible app: "L'App Bibbia"
+    for: "per"
+    kids: "ragazzi"
+    by youversion: "di YouVersion"
+    help your kids: "Aiuta i tuoi ragazzi ad innamorarsi della Parola di Dio."
+    free download: "Scarica gratuitamente!"
+    app store: "Disponibile nell'App store"
+    google play: "Trovala su Google Play"
+    amazon: "Disponibile nell'Amazon Appstore for Android"
+    app icon: "Icone app per l'App Bibbia per Ragazzi"
+    jesus and friends: "Gesù ed amici"
+    interact text: "Interagisci con la Bibbia e vedi come prende vita."
+    story text 1: "Il giardino d'Eden"
+    story text 2: "Il primo Natale"
+    story text 3: "Giuseppe, Maria e il bambino Gesù nella mangiatoia"
+    story text 4: "Gli angeli appaiono ai pastori per annunciare loro la nascita di Cristo"
+    story text 5: "Gesù guarisce il paralitico"
+    feature 1: "Un'esperienza gratuita della Bibbia per i tuoi ragazzi"
+    feature 2: "App animato di racconti per smartphone e tablet"
+    feature 3: "Illustrazioni colorate con animazioni attivati con un tocco"
+    feature 4: "Giochi e attività per aiutare i ragazzi a ricordare quello che imparano"
+    feature 5: "Navigazione facile per ragazzi"
+    share:
+      tell friends: "Parla ai tuoi amici dell'App Bibbia per Ragazzi."
+      facebook name: "L'App Bibbia per Ragazzi"
+      facebook description: "L'App Bibbia per Ragazzi è qui! Scarica l'app gratuita per iOS e Android oggi: storie bibliche interattive per aiutare tuo figlio a imparare, giocare e crescere nella Parola di Dio.\nwww.bible.com/kids"
+      facebook link: "http://www.bible.com/kids"
+      facebook redirect: "http://www.bible.com/kids"
+      twitter description: "L'App Bibbia per Ragazzi di @YouVersion è qui! È divertente e completamente gratuita. Scarica: bible.com/kids"
+      twitter hashtags: "kidsbible"
+      email: "E-mail"
+      email subject: "L'App Bibbia per Ragazzi è qui!"
+      email body: "Una grande notizia - l'App Bibbia per Ragazzi è qui! È completamente gratuita e disponibile ora per iPhone, iPad, iPod touch e dispositivi Android. L'app è una collezione sempre più ampia di storie della Bibbia con animazioni e attività di apprendimento attivati con il tocco, ideali per aiutare i ragazzi a imparare le storie principali della Bibbia. Vai a bible.com/kids sul tuo dispositivo mobile per scaricarla oggi."
+    partner:
+      youversion: "YouVersion: L'App Bibbia più popolare del mondo"
+      in partnership: "In collaborazione con"
+      one hope: "Una Speranza: Contenuto biblico straordinario per Ragazzi"
   now: "Ora"
   celebrating 50MM: "Celebrando 50 milioni di installazioni!"
   link: "Collegamento"
