--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -74,16 +74,24 @@ sk:
   meta:
     kids_app:
       title: "Aplikácia Biblia pre deti"
+      description: "Aplikácia Biblia pre deti je vynikajúcim spôsobom ako sa vaše deti môžu naučiť Biblické príbehy o Ježišovi, o dare večného života a mnohých iných veciach, ktoré nám Boh hovorí. V tejto interaktívnej aplikácii prichádzajú deti do priameho kontaktu s Božím Slovom prostredníctvom hravých obrázkov, získavania bodov za čítanie, či zbierania pokladov."
     100million:
       title: "Začína to 100 miliónmi"
       description: "Aplikácia Biblia bola nainštalovaná už takmer 100 miliónov krát, čo je významná udalosť! Ale my iba začíname. Stiahnite si bezplatnú aplikáciu Biblia ešte dnes - a potom ju zdieľajte s priateľmi. Poďme spolu tvoriť dejiny."
     mobile:
       title: "Aplikácia Biblia"
+      description: "Čítajte Božie Slovo kedykoľvek a kdekoľvek prostredníctvom aplikácie Biblia od YouVersion. Zdieľajte Písmo s priateľmi, zvýrazňujte si pasáže, pridávajte si ich medzi záložky a vytvárajte si zvyk denného čítania pomocou plánov čítania. K dispozícii pre iOS, Android, Blackberry, Windows Phone a iné."
     site:
       title: "Bible.com"
+      description: "Prineste si krásu a pravdu Biblie do každodenného života. S aplikáciou Biblia od YouVersion môžete čítať, pozerať, počúvať a zdieľať Božie Slovo na vašom smartfóne či tablete a online na Bible.com."
     connections:
       index:
         title: "Prepojené účty"
+  kids:
+    bible app: "Aplikácia Biblia"
+    share:
+      facebook name: "Aplikácia Biblia pre deti"
+      email: "Email"
   now: "Teraz"
   celebrating 50MM: "Oslavujeme 50 miliónov inštalacií našej aplikácie!"
   link: "Odkaz"
